welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:15: error: value c is not a member of object java.awt.Color
		if(getCouleurSol() == Color.c)
                                            ^